--- a/ratex-inline-install/InlineInstall.css
+++ b/ratex-inline-install/InlineInstall.css
@@ -30,3 +30,19 @@
   min-height:200px;
   width:auto;
 }
+@media (max-width: 767px) {
+  .button_tryextension_notsupported {
+    display: -webkit-box; display: -webkit-flex; display: -moz-flex; display: -ms-flexbox; display: flex;
+    -ms-flex-pack: distribute;
+    -webkit-justify-content: space-around;
+	  -moz-justify-content: space-around;
+	  justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+	  -moz-align-items: center;
+	  align-items: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
