--- a/ratex-popup/popup.css
+++ b/ratex-popup/popup.css
@@ -1,21 +1,25 @@
 @media only screen and (min-width: 501px) {
   .popupContainer {
     position: fixed;
-    bottom: 0px;
+    bottom: 0;
     background-color: #223544;
     width: 350px;
     height: 100px;
-    display: flex !important; display: -webkit-box !important; display: -ms-flexbox !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
     margin-left: 70px;
   }
 
   .popupContainer#popupContainerEntrance {
     cursor: pointer;
-    animation: fadeInUp 1s; -webkit-animation: fadeInUp 1s;
+    -webkit-animation: fadeInUp 1s;
+            animation: fadeInUp 1s;
   }
 
   .popupContainer#popupContainerExit {
-    animation: fadeOutDown 1s forwards; -webkit-animation: fadeOutDown 1s forwards;
+    -webkit-animation: fadeOutDown 1s forwards;
+            animation: fadeOutDown 1s forwards;
   }
 }
 
@@ -26,16 +30,20 @@
     bottom: 24px;
     width: 100%;
     height: 100px;
-    display: flex !important; display: -webkit-box !important; display: -ms-flexbox !important;
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
   }
 
   .popupContainer#popupContainerEntrance {
     cursor: pointer;
-    animation: fadeInLeft 1s; -webkit-animation: fadeInLeft 1s;
+    -webkit-animation: fadeInLeft 1s;
+            animation: fadeInLeft 1s;
   }
 
   .popupContainer#popupContainerExit {
-    animation: fadeOutRight 1s; -webkit-animation: fadeOutRight 1s;
+    -webkit-animation: fadeOutRight 1s;
+            animation: fadeOutRight 1s;
     opacity: 0;
   }
 }
@@ -47,24 +55,28 @@
 @-webkit-keyframes fadeInLeft {
   from {
     opacity: 0;
-    transform: translate3d(-100%, 0, 0); -webkit-transform: translate3d(-100%, 0, 0);
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes fadeInLeft {
   from {
     opacity: 0;
-    transform: translate3d(-100%, 0, 0); -webkit-transform: translate3d(-100%, 0, 0);
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 }
 
@@ -75,7 +87,8 @@
 
   to {
     opacity: 0;
-    transform: translate3d(100%, 0, 0); -webkit-transform: translate3d(100%, 0, 0);
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
   }
 }
 
@@ -93,48 +106,56 @@
 @-webkit-keyframes fadeInUp {
   from {
     opacity: 0;
-    transform: translate3d(0, 100%, 0); -webkit-transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes fadeInUp {
   from {
     opacity: 0;
-    transform: translate3d(0, 100%, 0); -webkit-transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
   }
 
   to {
     opacity: 1;
-    transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 }
 
 @-webkit-keyframes fadeOutDown {
   from {
     opacity: 1;
-    transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 
   to {
     opacity: 0;
-    transform: translate3d(0, 100%, 0); -webkit-transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
   }
 }
 
 @keyframes fadeOutDown {
   from {
     opacity: 1;
-    transform: translate3d(0, 0, 0); -webkit-transform: translate3d(0, 0, 0);
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 
   to {
     opacity: 0;
-    transform: translate3d(0, 100%, 0); -webkit-transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(0, 100%, 0);
+            transform: translate3d(0, 100%, 0);
   }
 }
 
@@ -144,15 +165,23 @@
 
 .popupContainer .textContainer {
   padding: 10px 16px;
-  width: inherit;
   margin-bottom: 6px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 
 .popupContainer .textContainer .closeContainer {
-  display: flex; display: -webkit-box; display: -ms-flexbox;
-  justify-content: space-between; -webkit-box-pack: justify; -ms-flex-pack: justify;
-  align-items: center; -webkit-box-align: center; -ms-flex-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 6px;
 }
 
