--- a/ratex-popup/popup.css
+++ b/ratex-popup/popup.css
@@ -99,7 +99,8 @@
 
   to {
     opacity: 0;
-    transform: translate3d(100%, 0, 0); -webkit-transform: translate3d(100%, 0, 0);
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0); 
   }
 }
 
