--- a/ratex-popup/popup.css
+++ b/ratex-popup/popup.css
@@ -5,9 +5,9 @@
     background-color: #223544;
     width: 350px;
     height: 100px;
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     margin-left: 70px;
   }
 
@@ -30,9 +30,9 @@
     bottom: 24px;
     width: 100%;
     height: 100px;
-    display: -webkit-box !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 
   .popupContainer#popupContainerEntrance {
@@ -49,7 +49,7 @@
 }
 
 .popupContainer#popupContainerOut {
-  display: none !important;
+  display: none;
 }
 
 @-webkit-keyframes fadeInLeft {
@@ -200,6 +200,10 @@
   color: white;
   font-size: 12px;
   font-weight: 800;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .textContainer #time {
@@ -207,5 +211,5 @@
   font-size: 12px;
   font-weight: bold;
   position: absolute;
-  bottom: 12px;
+  bottom: 6px;
 }
